[project]
name = "example-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yunhongze", email = "yunhongze@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[project.scripts]
example-pkg = "example_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
